# mpd-automount

./: .gitignore  Makefile  Makefile.am  PKGBUILD  README.md  configure.ac  mpd-automount-link.sh  mpd-automount.cpp
m4/: ax_define_dir.m4
src/: Makefile.am  mpd-automount-link.sh  mpd-automount.cpp
systemd/: Makefile.am  mpd-automount.service  mpd-automount.service.in
